website/src/css/custom.css
/* ... */
.docs-wrapper.docs-doc-page main div.row > article.col--6 {
  margin-bottom: 1.5rem;
}

/* OneTrust Cookies Settings Btn in Footer */
footer #ot-sdk-btn.ot-sdk-show-settings,
footer #ot-sdk-btn.optanon-show-settings {
  background: none;
  border: none;
  color: var(--ifm-footer-color);
  text-decoration: none;
  font-weight: var(--ifm-font-weight-bold);
  font-family: var(--ifm-font-family-base);
  padding: 0;
  line-height: inherit;
  font-size: 1.125rem;
  font-weight: 400;
  cursor: pointer;
}
footer #ot-sdk-btn.ot-sdk-show-settings:hover,
footer #ot-sdk-btn.optanon-show-settings:hover {
  background: none;
  border: none;
  color: var(--ifm-footer-color);
  text-decoration: underline;
}

/* Discourse Forum & Events Page */
.events-page section,
section.discourse-forum-page {
  padding: 4rem 0;
}

/* New Homepage Styles */

.home section {
  margin: 6.25rem auto 6.25rem;
  max-width: var(--ifm-container-width-xl);
  padding: 0 var(--ifm-spacing-horizontal);
}

.home section.from-the-blog {
  margin-bottom: 0;
}
.home section.from-the-community {
  margin-top: 0;
  
}

.home .resource-section h2 {
  margin: 0;
}

@media (max-width: 995px) {
  .home .resource-section  h2 {
    text-align: center;
    margin: 2rem inherit;
  }
}

section > h2:not(.resource-section) {
  margin-bottom: 25px;
}

.home .resource-section {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 16px;
  grid-template-areas:
    "featH2"
    "featResource"
    "popH2"
    "popResources";
}

@media (min-width: 996px) {
  .home .resource-section {
    display: grid;
    grid-template-columns: 2fr 1fr;
    row-gap: 25px;
    column-gap: calc(var(--ifm-spacing-horizontal) * 4);
    grid-template-areas:
      "popH2 featH2"
      "popResources  featResource";
  }
}

.home .popular-header {
  grid-area: popH2;
  margin-top: 2.5rem;
}

@media (min-width: 996px) {
  .home .popular-header {
    margin-top: 0;
  }
}

.home .popular-resources {
  grid-area: popResources;
}

.home .popular-resources .grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: var(--ifm-spacing-horizontal);
}

@media (min-width: 996px) {
  .home .popular-resources .grid {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-gap: calc(var(--ifm-spacing-horizontal) * 2);
  }
}

.home .featured-header {
  grid-area: featH2;
}

.home .featured-resource {
  grid-area: featResource;
  height: 100%;
}

.home .swiper .swiper-slide {
  height: unset;
} 

.home .swiper.swiper-initialized.swiper-horizontal.swiper-pointer-events.swiper-backface-hidden {
  padding-right: 3rem;
  padding-left: 3rem;
  padding-top: 0rem;
  padding-bottom: 6.25rem;
  margin-bottom: 0;
}

.home .swiper-button-next, .home .swiper-button-prev {
  color: #047377;
  font-weight: 800;
}

[data-theme='dark'] .home .swiper-button-next, [data-theme='dark'] .home .swiper-button-prev {
  color: #fff;
  font-weight: 800;
}

/* Community Home styles */
.community-home section {
  margin: calc(5vh) auto calc(2vh);
  max-width: var(--ifm-container-width-xl);
  padding: 0 var(--ifm-spacing-horizontal);
}


/* utilities */
.grid--3-col {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: var(--ifm-spacing-horizontal)
}

@media(min-width: 996px) {
  .grid--3-col {
    grid-template-columns: repeat(3, 1fr);
    grid-gap: calc(var(--ifm-spacing-horizontal) * 2);
  }
}

.justify-content-center {
  justify-content: center !important;
}

